# nvlog

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: backend_request.md  bug_report.md  config.yml  hardware_result.md
.github/workflows/: ci.yml  release.yml
backends/: nvlog_flash_sim.c  nvlog_flash_sim.h  nvlog_posix.c  nvlog_posix.h
backends/hal_examples/: nvlog_espidf_partition.c  nvlog_espidf_partition.h  nvlog_hal_eeprom.c  nvlog_hal_eeprom.h  nvlog_hal_fram.c  nvlog_hal_fram.h  nvlog_hal_nor_spi.c  nvlog_hal_nor_spi.h  nvlog_hal_stm32_flash.c  nvlog_hal_stm32_flash.h
docs/: API_REFERENCE.md  ARCHITECTURE.md  CAPACITY_PLANNING.md  COOKBOOK.md  GETTING_STARTED.md  HARDWARE_VALIDATION.md  PORTING_GUIDE.md  POWER_LOSS_CONTRACT.md  RTOS_INTEGRATION.md  TESTING.md  nvlog-v0.5-media-format.md
docs/audit/: STAGE_COMPLETION_MATRIX.md
docs/audit/evidence/: STAGE_01.md  STAGE_02.md  STAGE_03.md  STAGE_04.md  STAGE_05.md  STAGE_06.md  STAGE_07.md  STAGE_08.md  STAGE_09.md  final_manifest.json
examples/: CMakeLists.txt  README.md
examples/common/: nvlog_example_support.h
examples/eeprom/: README.md
examples/esp_idf/: README.md
examples/fram/: README.md  main.c
examples/freertos/: README.md  main.c
examples/minimal_linear/: README.md  main.c
examples/minimal_ring/: README.md  main.c
examples/posix_file/: README.md  main.c
examples/spi_nor/: README.md  main.c
examples/stm32/: README.md  main.c
examples/zephyr/: README.md  main.c
include/: nvlog.h  nvlog_hal_flash.h  nvlog_wire.h
src/: nvlog.c  nvlog.h  nvlog_hal_flash.c  nvlog_hal_flash.h  nvlog_wire.h
testbench/: README.md  test_config.example.json  test_config.hw100.json  test_config.json
testbench/docs/: PROTOCOL.md
testbench/firmware/HWTestBench/: HWTestBench.ino  README.md  bench_config.h  bench_hal.cpp  bench_hal.h  nvlog_bridge.c  nvlog_hal_flash_bridge.c  platformio.ini  project_adapter.cpp  project_adapter.h
testbench/firmware/SerialSmoke/: README.md  SerialSmoke.ino
testbench/host/: bench_common.py  power_fault.py  send_serial_command.py  serial_app_probe.py  session_runner.py  trigger_serial_command_async.py
testbench/host/tests/: __init__.py  test_bench_common.py  test_power_fault.py  test_session_runner.py
tests/: compile_public_c.c  compile_public_cpp.cpp  test_backends.c  test_flash.c  test_model.c  test_nvlog.c  test_powerloss.c  test_ring.c  test_wire.c
tools/: truth_guard.ps1
